# HTB-CLI

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md  knope.toml
.changeset/: claude-md-symlink.md  contributing-guide.md  ctf-sticky-event.md  ctf-support.md  ctf-work-status.md  docs-ctf-workflow.md  fix-ctf-api-types.md  fix-login-url.md  html-error-parsing.md  http-cache.md  jq-examples.md  json-pagination-fix.md  mcp-stdio-in-help.md  mcp-stdio.md  pwnbox.md  shell-completions.md
.github/workflows/: ci.yml  release.yml
src/: cache.rs  config.rs  error.rs  lib.rs  main.rs
src/api/: challenges.rs  ctf.rs  machines.rs  mod.rs  search.rs  seasons.rs  sherlocks.rs  user.rs  vpn.rs
src/cli/: auth.rs  cache.rs  challenges.rs  ctf.rs  machines.rs  mod.rs  pwnbox.rs  search.rs  seasons.rs  sherlocks.rs  user.rs  vpn.rs
src/mcp/: mod.rs  server.rs
src/models/: challenge.rs  ctf.rs  machine.rs  mod.rs  season.rs  sherlock.rs  user.rs  vpn.rs
src/output/: json.rs  mod.rs  table.rs
tasks/: ctf-plan.md  plan.md
tests/: cache_integration.rs  ctf_integration.rs
tests/fixtures/: challenge-categories.json  challenge-info-hybrid.json  challenge-info-int-points.json  challenge-info-poly.json  challenge-info-reversing.json  challenge-info-web-docker.json  challenge-own-incorrect.json  challenge-own-success.json  challenge-recommended.json  challenges-list.json  container-start.json  machine-recommended.json  season-list.json  season-user-ranks.json  sherlocks-categories.json  sherlocks-list.json  user-info.json  (+8 more)
(+9 files in other folders)
