[package]
name = "htb-cli"
version = "0.1.2"
edition = "2021"
rust-version = "1.97"
description = "Hack The Box CLI"
license = "MIT"
repository = "https://github.com/Saturate/HTB-CLI"
homepage = "https://github.com/Saturate/HTB-CLI"
keywords = ["hackthebox", "htb", "ctf", "pentesting", "security"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "htb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "2.2", features = ["server", "transport-io"] }
rpassword = "5"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
